--- a/flexexample.html
+++ b/flexexample.html
@@ -25,6 +25,14 @@
             justify-content: space-around;
             flex-basis: 33%;
         }
+        @media screen and (max-width: 768px) {
+            .container{
+                height: 300px;
+            }
+            .container, .item2{
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
